--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Oluwole Oyekanmi</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
 	<script src="https://use.typekit.net/jft7rpm.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<meta name="viewport" content="initial-scale=0.8">
@@ -39,14 +40,17 @@
 				<img class="social-image" src="facebook.png" />
 			</a>
 		</div>
-		<h1>Oluwole Oyekanmi</h1>
-		<p class="headline-headline italic">entrepreneur and technologist</p>
+		<p>HI THERE, I'M</P>
+		<h1>OLUWOLE OYEKANMI</h1>
+		<!--<p class="headline-headline italic">entrepreneur and technologist</p>
 		<p class="experience-headline paragraph">
 			Software Developer &amp; Entrepreneur at
 				<a class="text" onmouseover="hoverColor('#FFFC00')" href="http://www.meltwater.org">MEST</a>
-		</p>
+		</p> -->
 		<p class="description paragraph">
-			My name is Oluwole Oyekanmi. A Finance professional turned  Developer and business/tech writer.<br/>
+			A creative problem solver who spends a good chunk of time at the intersect tech, data, and finance. 
+			I believe in creating useful solutions that empower people to do more. Co-Founder of
+			<a href="https://joppalogic.com">Joppa Logic</a>
 		</p>
 		<p class="description paragraph">
 			<a href="https://twitter.com/Jugger_nought" class="button">
