--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Oluwole Oyekanmi</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
+<!-- 	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet"> -->
 	<script src="https://use.typekit.net/jft7rpm.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<meta name="viewport" content="initial-scale=0.8">
