--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Oluwole Oyekanmi</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<!-- 	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
 	<script src="https://use.typekit.net/jft7rpm.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<meta name="viewport" content="initial-scale=0.8">
@@ -40,8 +40,8 @@
 				<img class="social-image" src="facebook.png" />
 			</a>
 		</div>
-		<p>HI THERE, I'M</P>
-		<h1>OLUWOLE OYEKANMI</h1>
+		<p class="heading">HI THERE, I'M</P>
+		<h1 class="name">OLUWOLE OYEKANMI</h1>
 		<!--<p class="headline-headline italic">entrepreneur and technologist</p>
 		<p class="experience-headline paragraph">
 			Software Developer &amp; Entrepreneur at
@@ -50,7 +50,7 @@
 		<p class="description paragraph">
 			A creative problem solver who spends a good chunk of time at the intersect tech, data, and finance. 
 			I believe in creating useful solutions that empower people to do more. Co-Founder of
-			<a href="https://joppalogic.com">Joppa Logic</a>
+			<a href="https://joppalogic.com" class="button">Joppa Logic</a>
 		</p>
 		<p class="description paragraph">
 			<a href="https://twitter.com/Jugger_nought" class="button">
