--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 				<a class="text" onmouseover="hoverColor('#FFFC00')" href="http://www.meltwater.org">MEST</a>
 		</p> -->
 		<p class="description paragraph">
-			A creative problem solver who spends a good chunk of time at the intersect tech, data, and finance. 
+			A creative problem solver who spends a good chunk of time at the intersection tech, data, and finance. 
+			I am currently passionate about Data Science, Technology and everything in between.
 			I believe in creating useful solutions that empower people to do more. Co-Founder of
 			<a href="https://joppalogic.com" class="button">Joppa Logic</a>
 		</p>
