--- a/index.html
+++ b/index.html
@@ -1,103 +1,113 @@
 <html>
+
 <head>
-	<title>Oluwole Oyekanmi</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
-	<script src="https://use.typekit.net/jft7rpm.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<meta name="viewport" content="initial-scale=0.8">
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <title>Oluwole Oyekanmi</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
+  <script src="https://use.typekit.net/jft7rpm.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <meta name="viewport" content="initial-scale=0.8">
+  <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		ga('create', 'UA-31548111-4', 'auto');
-		ga('send', 'pageview');
+    ga('create', 'UA-31548111-4', 'auto');
+    ga('send', 'pageview');
 
-	</script>
+  </script>
 </head>
+
 <body>
-	<div class="fullbody">
-		<div class="social">
-			<a href="https://www.linkedin.com/in/oluwoleoyekanmi">
-				<img class="social-image" src="linkedin.png" />
-			</a>
-			<a href="https://github.com/woleoye">
-				<img class="social-image" src="github.png" />
-			</a>
-			<a href="https://twitter.com/Jugger_nought">
-				<img class="social-image" src="twitter.png" />
-			</a>
-			<a href="https://medium.com/@Jugger_nought">
-				<img class="social-image" src="medium.png" />
-			</a>
-			<a href="https://www.instagram.com/jugger_nought/">
-				<img class="social-image" src="instagram.png" />
-			</a>
-			<a href="https://www.facebook.com/woyekanmi">
-				<img class="social-image" src="facebook.png" />
-			</a>
-		</div>
-		<p class="heading">HI THERE, I'M</P>
-		<h1 class="name">OLUWOLE OYEKANMI</h1>
-		<!--<p class="headline-headline italic">entrepreneur and technologist</p>
-		<p class="experience-headline paragraph">
-			Software Developer &amp; Entrepreneur at
-				<a class="text" onmouseover="hoverColor('#FFFC00')" href="http://www.meltwater.org">MEST</a>
-		</p> -->
-		<p class="description paragraph">
-			A creative problem solver who spends a good chunk of time at the intersection tech, data, and finance. 
-			I am currently passionate about Data Science, Technology and everything in between.
-			I believe in creating useful solutions that empower people to do more. Co-Founder of
-			<a href="https://joppalogic.com" class="button">Joppa Logic</a>
-		</p>
-		<p class="description paragraph">
-			<a href="https://twitter.com/Jugger_nought" class="button">
-				contact me
-			</a>
-		</p>
-	</div>
+  <div class="container">
+    <h1 class="name">Oluwole Oyekanmi</h1>
+  
+    <div>
+      <h4 class="title">Now</h4>
+      <ul class="listCover">
+        <li class="list">
+          <a href="https://quantextive.com/">Quantextive</a>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="box">
+      <h4 class="title">Before</h4>
+      <ul class="listCover">
+        <li class="list">
+          <a href="https://meltwater.org">MEST</a>, </li>
+        <li class="list">
+          <a href="https://joppalogic.com">JoppaLogic</a>, </li>
+        <li class="list">
+          <a href="https://amplifypay.com">AmplifyPay</a>, </li>
+        <li class="list">
+          <a href="https://riby.me">RibyFinance</a>, </li>
+        <li class="list">
+          <a href="https://brickstone.africa">Brickstone</a>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="box">
+      <h4 class="title">Presence</h4>
+      <ul class="listCover">
+        <li class="list">
+          <a href="https://medium.com/@WoleOyekanmi">Medium</a>, </li>
+        <li class="list">
+          <a href="https://recursivealpha.substack.com">Newsletter</a>, </li>
+        <li class="list">
+          <a href="https://recursivealpha.com">Podcast</a>, </li>
+        <li class="list">
+          <a href="https://twitter.com/jugger_nought">Twitter</a>, </li>
+        <li class="list">
+          <a href="">Blog</a>, </li>
+        <li class="list">
+          <a href="https://www.quora.com/profile/Oluwole-Oyekanmi">Quora</a>, </li>
+        <li class="list">
+          <a href="https://www.theatlas.com/user/wolle">Atlas</a>, 
+        </li>
+      </ul>
+    </div>
+  
+    <div class="box">
+      <h4 class="title">Projects</h4>
+      <ul class="listCover">
+        <li class="list">
+          <a href="https://afriq.co">Afriqco</a>, </li>
+        <li class="list">
+        <li class="list">
+          <a href="https://joppalogic.com">JoppaLogic</a>
+        </li>
+        <li class="list">
+          <a href="https://vendorhit.com">VendorHit</a>, </li>
+          <a href="https://soundcloud.com/someofall">Some of All</a>, </li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="bottom">
+    <ul class="listCover">
+      <li class="list">
+        <a class="change" href="https://twitter.com/jugger_nought">Twitter</a> |
+      </li>
+
+      <li class="list">
+        <a class="change" href="https://github.com/woleoye">Github</a> |
+      </li>
+
+      <li class="list">
+        <a class="change" href="https://www.linkedin.com/in/oluwoleoyekanmi/">Linkedin</a> |
+      </li>
+
+      <li class="list">
+        <a class="change" href="https://medium.com/@WoleOyekanmi">Medium</a>
+      </li>
+    </ul>
+  </div>
 </body>
-<script>
 
-function hoverColor(key){
-	document.body.style.backgroundColor = key;
-}
-
-var colors = [
-	'#64EA4A',
-	'#e8e8e8',
-	'#00AABF',
-	'#0090BF',
-	'#F5FF90',
-	'#D6FFB7',
-	'#FFC15E',
-	'#FF9F1C',
-	'#56FFC1',
-	'#35B5FF',
-	'#FF4479',
-	'#FFBF00',
-	'#7AA5C4',
-	'#FDC364',
-	'#FFC98C',
-	'#FF918C',
-	'#CEE8FF',
-];
-
-var i = 0;
-
-$( "img.social-image" )
-	.mouseover(function() {
-		hoverColor(colors[i]);
-
-		if(i < colors.length){
-			i++;
-		}else{
-			i = 0;
-		}
-	});
-
-</script>
 </html>
