--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Oluwole Oyekanmi</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 	<link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
 	<script src="https://use.typekit.net/jft7rpm.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
