--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>Oluwole Oyekanmi</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet">
-  <script src="https://use.typekit.net/jft7rpm.js"></script>
+  <!-- <link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Chivo:300" rel="stylesheet">
+  <!-- <script src="https://use.typekit.net/jft7rpm.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="initial-scale=0.8">
-  <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
+  <!-- <script>try { Typekit.load({ async: true }); } catch (e) { }</script> -->
   <script>
     (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
