--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119756101-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119756101-1');
+  </script>
+  
   <title>Oluwole Oyekanmi</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Manuale" rel="stylesheet"> -->
@@ -8,19 +18,9 @@
   <!-- <script src="https://use.typekit.net/jft7rpm.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="initial-scale=0.8">
-  <!-- <script>try { Typekit.load({ async: true }); } catch (e) { }</script> -->
-  <script>
-    (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-31548111-4', 'auto');
-    ga('send', 'pageview');
 
-  </script>
+
 </head>
 
 <body>
