Update meta and cname

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <!-- <script src="https://use.typekit.net/jft7rpm.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="initial-scale=0.8">
-
-
+  <meta name="description" content="Oluwole Oyekanmi is a data scientist and financial analyst based in Lagos, Nigeria. He is currently the Chief Operating Officer at Quantextive">
+  <meta name="keywords" content="Oluwole,oluwole,Oyekanmi,oyekanmi,data,finance">
+  <meta name="author" content="Oluwole Oyekanmi">
 
 </head>
 
@@ -63,13 +64,13 @@
         <li class="list">
           <a href="https://recursivealpha.com">Podcast</a>, </li>
         <li class="list">
-          <a href="https://twitter.com/jugger_nought">Twitter</a>, </li>
+          <a href="https://twitter.com/oluwoleco">Twitter</a>, </li>
         <li class="list">
           <a href="">Blog</a>, </li>
         <li class="list">
           <a href="https://www.quora.com/profile/Oluwole-Oyekanmi">Quora</a>, </li>
         <li class="list">
-          <a href="https://www.theatlas.com/user/wolle">Atlas</a>, 
+          <a href="https://www.theatlas.com/user/OluwoleCo">Atlas</a>, 
         </li>
       </ul>
     </div>
@@ -93,11 +94,11 @@
   <div id="bottom">
     <ul class="listCover">
       <li class="list">
-        <a class="change" href="https://twitter.com/jugger_nought">Twitter</a> |
+        <a class="change" href="https://twitter.com/oluwoleco">Twitter</a> |
       </li>
 
       <li class="list">
-        <a class="change" href="https://github.com/woleoye">Github</a> |
+        <a class="change" href="https://github.com/oluwoleco">Github</a> |
       </li>
 
       <li class="list">
@@ -105,7 +106,7 @@
       </li>
 
       <li class="list">
-        <a class="change" href="https://medium.com/@WoleOyekanmi">Medium</a>
+        <a class="change" href="https://medium.com/@oluwoleco">Medium</a>
       </li>
     </ul>
   </div>
